name:               hjsonpointer
version:            1.2.0
synopsis:           JSON Pointer library
homepage:           https://github.com/seagreen/hjsonpointer
license:            MIT
license-file:       MIT-LICENSE.txt
author:             Ian Grant Jeffries
maintainer:         ian@housejeffries.com
category:           Data
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  changelog.md
  README.md

library
  hs-source-dirs:
    src
  default-language: Haskell2010
  ghc-options:
    -Wall
  exposed-modules:
    JSONPointer
  build-depends:
      base                 >= 4.6 && < 4.10
    , aeson                >= 0.7
    , hashable             >= 1.2
    , QuickCheck           >= 2.8
    , unordered-containers >= 0.2
    , semigroups           >= 0.18
      -- ^ for GHCs < 8
    , text                 >= 1.2
    , vector               >= 0.10

test-suite unit
  hs-source-dirs:
    test
    ./
  main-is: Unit.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
  other-modules: Example
  build-depends:
      aeson
    , base
    , hjsonpointer
    , hspec                >= 2.2
    , http-types           >= 0.8
    , QuickCheck
    , unordered-containers
    , text
    , vector

source-repository head
  type: git
  location: git://github.com/seagreen/hjsonpointer.git
